ags (2.1.56)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_devout.c and ags_midiin.c to use ALSA hints
	* enabled third mode of ags-envelope by audio signal length

ags (2.1.55)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_lv2_plugin.c to check UI iriref
	* improved LV2 presets to check iri

ags (2.1.54)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_simple_file_read_config() to modify AgsThread:max-precision and main loops frequency
	* fixed AgsThread:max-precision property specification
	* fixed wrong warning during ags_recall_dependency_resolve()
	* improved MIDI playback of ags-play-lv2 and ags-play-dssi recall to check AGS_NOTE_FEED
	* improved ags_audio_signal_feed() to use new loop algorithm

ags (2.1.53)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSequencer::lock-buffer() and AgsSequencer::unlock-buffer()
	* added plugin property to AgsRecallLadspa, AgsRecallDssi and AgsRecallLv2
	* fixed ags_recall_lv2_run_run_inter() to test if instrument by AGS_LV2_PLUGIN_IS_SYNTHESIZER flag
	* fixed double free in ags_jack_port_finalize() and ags_pulse_port_finalize()
	* applied patches for FreeBSD
	* replaced shell expansion of directory lists in Makefile.am

ags (2.1.52)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed accessing uninitialized pointer in ags_recall_lv2_run.c
	* fixed accessing uninitialized pointer in ags_recall_ladspa_run.c
	* fixed XPath accessor to read LV2 UIs

ags (2.1.51)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed bisect algorithm of AgsNotation, AgsAutomation and AgsWave
	* fixed wrong ref-count in ags-eq10 recall

ags (2.1.50)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unit-test ags_notation_test.c

ags (2.1.49)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved bisection of AgsNotation, AgsAutomation and AgsWave