@@ -32,6 +32,7 @@ ags_lv2_plugin_concat_atom_sequence
 ags_lv2_plugin_atom_sequence_append_midi
 ags_lv2_plugin_atom_sequence_remove_midi
 ags_lv2_plugin_clear_atom_sequence
+ags_lv2_plugin_find_uri
 ags_lv2_plugin_find_pname
 ags_lv2_plugin_change_program
 ags_lv2_plugin_new
